CJ - Fixed css styling issues with the div (there was no overflow, the text would just blow past the 500px height restriction). Fixed with float left/right.

--- a/FogBugzCategorizer.Plugins/static/css/Categorizer.css
+++ b/FogBugzCategorizer.Plugins/static/css/Categorizer.css
@@ -1,36 +1,40 @@
 ﻿div.categorizerContainer {
 	width: 500px;
-	height: 500px;
 	background-color: gray;
-	position: relative;
 }
 
 div.categorizerContent {
 	width: 235px;
-	height: 235px;
+	height: 300px;
 	background-color: white;
+	overflow-y: scroll;
 }
 
 div.categorizerSelected {
 	width: 480px;
-	height: 235px;
+	height: 300px;
 	background-color: white;
+	overflow-y: scroll;
 }
 
 div.categorizerLeft {
-	position:absolute;
-	top: 10px;
-	left: 10px;
+	float: left;
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-bottom: 10px;
 }
 
 div.categorizerRight {
-	position:absolute;
-	top: 10px;
-	right: 10px;
+	float: right;
+	margin-top: 10px;
+	margin-right: 10px;
+	margin-bottom: 10px;
 }
 
 div.categorizerBottom {
-	position:absolute;
-	bottom: 10px;
-	left: 10px;
+	clear: both;
+	width: 480px;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-bottom: 10px;
 }
